--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "*",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.25",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.555.0",
     "motion": "*",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
@@ -52,6 +54,7 @@
     "@types/node": "^20.10.0",
     "@types/react": "^19.2.7",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "tailwindcss": "^4.1.17",
     "vite": "6.3.5"
   },
   "scripts": {
